--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -1,4 +1,38 @@
-.Content-episodes{
+@import './functions';
+.Episodes{   
     background: linear-gradient(to bottom left, #0000FF,#0000A3);
-    clip-path: polygon(100% 0%, 0% 5%, 0% 100%, 100% 95%);
+    clip-path: polygon(100% 0%, 0% 5%, 0% 100%, 100% 95%);    
+    padding: 20% 5% 40%;
+    &-title{
+        margin-top: 0;
+        color: #FFFFFF;
+    }    
+    &-grid{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(4 , 1fr);
+    }
+    &-iframe{
+        position: relative;
+        border: none;
+        width: 100%;
+        height: pxToem(16, 160) * 1em;
+    }
+
+    @media screen and (min-width: 768px){        
+        clip-path: polygon(100% 0%, 0% 14%, 0% 100%, 100% 86%);        
+        padding: 10% 10% 20%;
+        &-title{
+            grid-column: 1 / 3;
+            margin-left: 7%;
+            margin-bottom: 3%;
+        } 
+        &-grid{
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr); 
+            column-gap: 5%;       
+            row-gap: 10%;
+        }
+    }
+    
 }
