--- a/styles/style.css
+++ b/styles/style.css
@@ -218,10 +218,56 @@ body {
   font-family: 'IBM Plex Mono', monospace;
 }
 
-.Content-episodes {
+.Episodes {
   background: -webkit-gradient(linear, right top, left bottom, from(#0000FF), to(#0000A3));
   background: linear-gradient(to bottom left, #0000FF, #0000A3);
   -webkit-clip-path: polygon(100% 0%, 0% 5%, 0% 100%, 100% 95%);
           clip-path: polygon(100% 0%, 0% 5%, 0% 100%, 100% 95%);
+  padding: 20% 5% 40%;
+}
+
+.Episodes-title {
+  margin-top: 0;
+  color: #FFFFFF;
+}
+
+.Episodes-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 100%;
+      grid-template-columns: 100%;
+  -ms-grid-rows: (1fr)[4];
+      grid-template-rows: repeat(4, 1fr);
+}
+
+.Episodes-iframe {
+  position: relative;
+  border: none;
+  width: 100%;
+  height: 10em;
+}
+
+@media screen and (min-width: 768px) {
+  .Episodes {
+    -webkit-clip-path: polygon(100% 0%, 0% 14%, 0% 100%, 100% 86%);
+            clip-path: polygon(100% 0%, 0% 14%, 0% 100%, 100% 86%);
+    padding: 10% 10% 20%;
+  }
+  .Episodes-title {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    margin-left: 7%;
+    margin-bottom: 3%;
+  }
+  .Episodes-grid {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+    -webkit-column-gap: 5%;
+            column-gap: 5%;
+    row-gap: 10%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
