We come from mobile view done

--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -3,6 +3,12 @@
     display: flex;
     flex-flow: column nowrap;
     position: relative;
+    & p{
+        line-height: 22px;
+        color: #060A24 ;               
+        font-size: 14px;
+        margin-bottom: 3em;
+    } 
     img{
         max-width: 100%;
     }
@@ -26,12 +32,7 @@
         &-desktop{                 
             display: none;
         }
-        & p{
-            line-height: 22px;
-            color: blue;               
-            font-size: 14px;
-            margin-bottom: 3em;
-        }        
+               
     }
     &-knowMore{
         background-color: rgba(0,243,187,1);
