--- a/styles/style.css
+++ b/styles/style.css
@@ -278,4 +278,25 @@ body {
 .WeComeFrom p {
   margin-bottom: 0;
 }
+
+@media screen and (min-width: 768px) {
+  .WeComeFrom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .WeComeFrom .WeComeFrom-text {
+    width: 50%;
+  }
+  .WeComeFrom .Content-image-secret {
+    width: 31.8%;
+    margin: 0 4.3% 0 13.9%;
+  }
+}
 /*# sourceMappingURL=style.css.map */
