--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -55,3 +55,20 @@
         }
     }
 }
+.Content-grid{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto 30vw auto;
+    .Episodes{
+        grid-column: 1 / 2;
+        grid-row: 1/ 3;
+    }
+    .WeComeFrom{
+        grid-column: 1 / 2;
+        grid-row: 2 / 4;
+        z-index: 2;
+    }
+    @media screen and (min-width: 768px){
+        grid-template-rows: auto 13vw auto;
+    }
+}
