--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -24,7 +24,7 @@
         padding: 10% 10% 20%;
         &-title{
             grid-column: 1 / 3;
-            margin-left: 7%;
+            margin-left: 7vw;
             margin-bottom: 3%;
         } 
         &-grid{
@@ -70,5 +70,30 @@
     }
     @media screen and (min-width: 768px){
         grid-template-rows: auto 13vw auto;
+    }
+}
+.Guests{
+    display: flex;
+    flex-flow: column nowrap;
+    margin-bottom: 5%;
+    &-title{
+        width: pxToem(36, 288) * 1em;
+        margin: 3% 5%;
+    }
+    img{
+        margin: 0;
+        padding: 0;
+    }
+    @media screen  and(min-width: 768px){
+        flex-flow: row wrap;        
+        margin-bottom: 3%;
+        &-title{
+            width: 100%;
+            margin-left: 10%;
+            padding: 0 0 0 7vw;
+        }
+        img{
+            width: 33.33333333%;
+        }
     }
 }
