--- a/styles/style.css
+++ b/styles/style.css
@@ -257,7 +257,7 @@ body {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1 / 3;
-    margin-left: 7%;
+    margin-left: 7vw;
     margin-bottom: 3%;
   }
   .Episodes-grid {
@@ -332,6 +332,45 @@ body {
   .Content-grid {
     -ms-grid-rows: auto 13vw auto;
         grid-template-rows: auto 13vw auto;
+  }
+}
+
+.Guests {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  margin-bottom: 5%;
+}
+
+.Guests-title {
+  width: 8em;
+  margin: 3% 5%;
+}
+
+.Guests img {
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .Guests {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    margin-bottom: 3%;
+  }
+  .Guests-title {
+    width: 100%;
+    margin-left: 10%;
+    padding: 0 0 0 7vw;
+  }
+  .Guests img {
+    width: 33.33333333%;
   }
 }
 /*# sourceMappingURL=style.css.map */
