--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -24,7 +24,7 @@
         padding: 10% 10% 20%;
         &-title{
             grid-column: 1 / 3;
-            margin-left: 7vw;
+            padding-left: 7vw;
             margin-bottom: 3%;
         } 
         &-grid{
@@ -95,5 +95,37 @@
         img{
             width: 33.33333333%;
         }
+    }
+}
+.Topics{
+    margin: 0 5%;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    &-div{
+        position: relative;
+        display: inline-block;
+        width: 100%;
+    }
+    &-subtitle{
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-size: 24px;
+        font-weight: bold;
+        color: #060A24;
+        text-align: center;
+        width: 60%;
+        margin: 3% 20% 15% 20%;
+    }
+    &-div:last-child &-subtitle{   
+        width: 100%;   
+        margin: 3% 0 15% 0;
+    }
+    &-icon{
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    &-link:visited{
+        color: #060A24;
     }
 }
