--- a/styles/style.css
+++ b/styles/style.css
@@ -257,7 +257,7 @@ body {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1 / 3;
-    margin-left: 7vw;
+    padding-left: 7vw;
     margin-bottom: 3%;
   }
   .Episodes-grid {
@@ -372,5 +372,51 @@ body {
   .Guests img {
     width: 33.33333333%;
   }
+}
+
+.Topics {
+  margin: 0 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.Topics-div {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+
+.Topics-subtitle {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: #060A24;
+  text-align: center;
+  width: 60%;
+  margin: 3% 20% 15% 20%;
+}
+
+.Topics-div:last-child .Topics-subtitle {
+  width: 100%;
+  margin: 3% 0 15% 0;
+}
+
+.Topics-icon {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.Topics-link:visited {
+  color: #060A24;
 }
 /*# sourceMappingURL=style.css.map */
