--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -129,3 +129,24 @@
         color: #060A24;
     }
 }
+ 
+.LastsNews{
+    background-image: linear-gradient(225deg, #0000FF, #0000A3);
+    clip-path: polygon(100% 0%, 0% 15%, 0% 100%, 100% 100%);
+    padding: 5% 5% 20% 5%;
+    &-title{
+        color: #FFFFFF;
+        padding: 0 10%;
+        text-align: center;
+    }
+    &-button{
+        background-color: rgba(0,243,187,1);
+        color: rgba(6,10,36,1);
+        font-family: 'IBM Plex Mono', monospace;
+        font-size: 16px;
+        font-weight: 500;
+        width: 100%;
+        height: pxToem(16, 48) * 1em;
+        border: none;
+    }
+}
