--- a/styles/style.css
+++ b/styles/style.css
@@ -419,4 +419,28 @@ body {
 .Topics-link:visited {
   color: #060A24;
 }
+
+.LastsNews {
+  background-image: linear-gradient(225deg, #0000FF, #0000A3);
+  -webkit-clip-path: polygon(100% 0%, 0% 15%, 0% 100%, 100% 100%);
+          clip-path: polygon(100% 0%, 0% 15%, 0% 100%, 100% 100%);
+  padding: 5% 5% 20% 5%;
+}
+
+.LastsNews-title {
+  color: #FFFFFF;
+  padding: 0 10%;
+  text-align: center;
+}
+
+.LastsNews-button {
+  background-color: #00f3bb;
+  color: #060a24;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 16px;
+  font-weight: 500;
+  width: 100%;
+  height: 3em;
+  border: none;
+}
 /*# sourceMappingURL=style.css.map */
