--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -128,6 +128,21 @@
     &-link:visited{
         color: #060A24;
     }
+    @media screen and (min-width: 768px){
+        flex-flow: row wrap;
+        justify-content: center;
+        &-title{
+            width: 100%;
+        }
+        &-div{
+            width: 25%;
+        }
+        &-subtitle{
+            margin-right: 0px;
+            margin: 3% auto 15%;
+            text-align: center;
+        }
+    }
 }
  
 .LastsNews{
