--- a/styles/style.css
+++ b/styles/style.css
@@ -420,6 +420,29 @@ body {
   color: #060A24;
 }
 
+@media screen and (min-width: 768px) {
+  .Topics {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .Topics-title {
+    width: 100%;
+  }
+  .Topics-div {
+    width: 25%;
+  }
+  .Topics-subtitle {
+    margin-right: 0px;
+    margin: 3% auto 15%;
+    text-align: center;
+  }
+}
+
 .LastsNews {
   background-image: linear-gradient(225deg, #0000FF, #0000A3);
   -webkit-clip-path: polygon(100% 0%, 0% 15%, 0% 100%, 100% 100%);
