Last news desktop padding bottom fixed

--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -164,4 +164,7 @@
         height: pxToem(16, 48) * 1em;
         border: none;
     }
+    @media screen and (min-width: 768px){
+        padding-bottom: 10%;
+    }
 }
