--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 @import './content';
 @import './header';
-@import './general';    
-@import './sections';   
+@import './general';  
+@import './sections';  
+@import './_footer';  
