--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,3 +1,37 @@
 .Footer{
-    grid-column: 1 / 3; 
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    padding-left: 15%;
+    padding-right: 15%;
+    position: relative;
+    color: #060A24;
+    &-copyright{
+        font-size: 14px;
+    }
+    &-items{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0;
+    }
+    &-item{
+        display: inline-block;
+        list-style: none;
+    }
+    a:visited {
+        color: #060A24;
+    }
+    @media screen and (min-width: 768px){
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        padding-left: 10%;
+        padding-right: 10%;
+        &-items{
+            width: fit-content;
+        }
+        &-item{
+            padding-left: 2em;
+        }
+    }
 }
