Navigation in same page done

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -51,7 +51,15 @@
         font-size: 16px;  
         height: pxToem(16,56) * 1em; 
     }
+    &-link:link{
+        text-decoration: none;    
+        color: rgba(255,255,255,1);
+    }
     &-link:visited{
+        text-decoration: none;    
+        color: rgba(255,255,255,1);
+    }
+    &-link:active{
         text-decoration: none;    
         color: rgba(255,255,255,1);
     }
@@ -93,7 +101,15 @@
         &-item:last-child{        
             flex-shrink: 3;
         }
+        &-link:link{
+            text-decoration: none;    
+            color: rgba(6,10,36,1);
+        }
         &-link:visited{
+            text-decoration: none;    
+            color: rgba(6,10,36,1);
+        }
+        &-link:active{
             text-decoration: none;    
             color: rgba(6,10,36,1);
         }
