--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -165,6 +165,15 @@
         border: none;
     }
     @media screen and (min-width: 768px){
+        clip-path: polygon(100% 0%, 0% 25%, 0% 100%, 100% 100%);
+        padding-top: 10%;
         padding-bottom: 10%;
+        position: relative;
+        &-button{
+            position: relative;
+            width: 30%;            
+            left: 50%;
+            transform: translateX(-50%);
+        }
     }
 }
