--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -29,6 +29,7 @@
         background-color: rgba(0,0,236,1);                     
         width: 100%;  
         margin-top: pxToem(16,10) * 1em;
+        margin-bottom: 2em;
     }
     &-checkbox{
         display: none;
@@ -50,6 +51,10 @@
         width: 100%;  
         font-size: 16px;  
         height: pxToem(16,56) * 1em; 
+    }
+    &-items{
+        margin-top: 0;
+        margin-bottom: 0;
     }
     &-link:link{
         text-decoration: none;    
