--- a/styles/style.css
+++ b/styles/style.css
@@ -127,6 +127,7 @@
   background-color: #0000ec;
   width: 100%;
   margin-top: 0.625em;
+  margin-bottom: 2em;
 }
 
 .Header-checkbox {
@@ -152,6 +153,11 @@
   width: 100%;
   font-size: 16px;
   height: 3.5em;
+}
+
+.Header-items {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .Header-link:link {
