--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -2,8 +2,7 @@
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding: 0 14.5%;
     position: relative;
     color: #060A24;
     &-copyright{
