--- a/styles/_sections.scss
+++ b/styles/_sections.scss
@@ -136,6 +136,8 @@
         justify-content: center;
         &-title{
             width: 100%;
+            margin-left: 5%;
+            padding-left: 7vw;
         }
         &-div{
             width: 25%;
