--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
   position: relative;
+  width: 100vw;
 }
 
 .Content p {
@@ -27,7 +28,7 @@
 
 .Content-description {
   color: #060a24;
-  margin: 0 10% 1.5em 5%;
+  margin: 0 5% 1.5em 5%;
 }
 
 .Content-description-title {
@@ -41,6 +42,11 @@
 
 .Content-description-title:nth-child(3) {
   width: 100%;
+}
+
+.Content-description-title:nth-child(3)::after {
+  content: ".";
+  color: #0000ec;
 }
 
 .Content-description-desktop {
@@ -288,8 +294,8 @@ html {
   display: grid;
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-  -ms-grid-rows: (1fr)[4];
-      grid-template-rows: repeat(4, 1fr);
+  -ms-grid-rows: 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
 .Episodes-iframe {
@@ -313,10 +319,10 @@ html {
     margin-bottom: 3%;
   }
   .Episodes-grid {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: (1fr)[2];
-        grid-template-rows: repeat(2, 1fr);
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
     -webkit-column-gap: 5%;
             column-gap: 5%;
     row-gap: 10%;
@@ -348,11 +354,12 @@ html {
             justify-content: center;
   }
   .WeComeFrom .WeComeFrom-text {
+    margin-top: 10%;
     width: 50%;
   }
   .WeComeFrom .Content-image-secret {
-    width: 31.8%;
-    margin: 0 4.3% 0 13.9%;
+    width: 37.7%;
+    margin: 0 4.3% 0 8%;
   }
 }
 
